<resources>
    <string name="app_name">LittleDoor</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="send_otp">Send OTP</string>
    <string name="login_as_therapist">Are you registered therapist?<font color="#643FDB"> Sign Up</font> </string>
    <string name="label_terms_condition">I agree with all<font color="#F47A7A"> Terms and Conditions</font> </string>
    <string name="by_sign_up_">By Sign up with us, you agree to\n our Terms and Conditions and Privacy Policy</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_the_otp_we_just_sent_to_your_phone_then_start_reset_your_new_password">Enter the OTP we just sent to your phone then start reset your new password.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="select">Select</string>
    <string name="help_us_match_you_to_the_right_therapist">Help us match you to the right therapist</string>
    <string name="skip_question">Skip Question</string>
    <string name="explore_therapy">Explore Therapy</string>
    <string name="afternoon_greet">Good Afternoon</string>
    <string name="evening_greet">Good Evening</string>
    <string name="night_greet">Good Night</string>
    <string name="morning_greet">Good Morning</string>
    <string name="get_started_message">We customized our Experts for more specialized care you needs.\nGet started with us!</string>
    <string name="event">Event</string>
    <string name="journal">My Daily Journal</string>
    <string name="hello">Hello</string>
    <string name="categories">Categories</string>
    <string name="appointment">Appointment</string>
    <string name="find_therapist">Let’s find your top therapist!</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="terms_of">If you’re under the age required to manage your own Google Account, you must have your parent or legal guardian’s permission to use a Google Account. Please have your parent or legal guardian read these terms with you.\n\nIf you’re a parent or legal guardian, and you allow your child to use the services, then these terms apply to you and you’re responsible for your child’s activity on the services.\n\nSome Google services have additional age requirements as described in their service-specific additional terms and policies.\n\n\nIf you’re under the age required to manage your own Google Account, you must have your parent or legal guardian’s permission to use a Google Account. Please have your parent or legal guardian read these terms with you.\n\nIf you’re a parent or legal guardian, and you allow your child to use the services, then these terms apply to you and you’re responsible for your child’s activity on the services.\n\nSome Google services have additional age requirements as described in their service-specific additional terms and policies.</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="phone_error_empty">Please enter phone number</string>
    <string name="generic_loading_message">Loading..</string>
    <string name="error_empty_name">Please enter your name</string>
    <string name="error_empty_email">Please enter email address</string>
    <string name="error_empty_dob">Please select your date of birth</string>
    <string name="error_empty_gender">Please select your gender</string>
    <string name="error_empty_city">Please select your city</string>
    <string name="mobile">Mobile</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="error_message_terms">"To continue Please click the checkbox to indicate that you agree to the terms of service. "</string>
    <string name="basic_details">Basic Details</string>
    <string name="work_experience">Work experience</string>
    <string name="select_your_expertise">Select your expertise</string>
    <string name="areas_of_specialization">Areas of specialization</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="upload_certificate">Upload Certificate</string>
    <string name="upload_file">Upload file</string>
    <string name="add_a_description">Add a description</string>
    <string name="save_amp_proceed"><![CDATA[Save & Proceed]]></string>
    <string name="add_more_work_experience">Add more work experience</string>
    <string name="search_skills">Search Skills</string>
    <string name="expertise">Expertise</string>
    <string name="education">Education</string>
    <string name="level_of_education">Level of education</string>
    <string name="e_g_bachelor_s_master_s_phd">e.g. Bachelor\'s, Master\'s, PhD</string>
    <string name="completion_year">Completion Year</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="language">Language</string>
    <string name="add_skills">Add Skills</string>
    <string name="add_language">Add language</string>
    <string name="skill_language">Skill language</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1_hint">Apartment Name, suite</string>
    <string name="address_line_2_hint">Road Name, Landmark</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="upload_address_proof">Upload Address Proof</string>
    <string name="appreciation">Appreciation</string>
    <string name="award_name">Award name</string>
    <string name="e_g_best_therapy_award_2022">e.g. Best therapy award 2022</string>
    <string name="category_achievement_achieved">Category/Achievement achieved</string>
    <string name="issue_date">Issue Date</string>
    <string name="add_title">Add Title</string>
    <string name="other_documents">Other Documents</string>
    <string name="remove">Remove</string>
    <string name="institution_name">Institution name</string>
    <string name="field_of_study">Field of Study</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="some_thing_went_wrong">Some thing went wrong!! Please try again later</string>
    <string name="finish">Finish</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="appointments">Appointments</string>
    <string name="message">Message</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="update">Update</string>
    <string name="how_are_you_feeling_today">How are you feeling today ?</string>
    <string name="submit">Submit</string>
    <string name="transaction">Transaction</string>
    <string name="notification">Notification</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="all_payment">All Payment</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="session_details">Session Details</string>
    <string name="revenue">Revenue</string>
    <string name="enter_your_per_session_charges">Enter your per session charges</string>
    <string name="select_your_available_timeslot">Select your available timeslot</string>
    <string name="no_appointment_error">You have no appointments. Please modify the filter or schedule a new appointment.</string>
    <string name="my_post">My Post</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="no_schedule_appointment">No appointments scheduled at the moment. We\'ll keep you posted if any appointments are arranged.</string>
    <string name="add_new_bank_account">Add New Bank Account</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="account_holder_s_name">Account Holder’s Name</string>
    <string name="account_number">Account Number</string>
    <string name="re_enter_account_number">Re-enter Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_type">Account Type</string>
    <string name="confirm">Confirm</string>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="error_empty_bank_name">Please enter the bank name.</string>
    <string name="error_empty_account_holder_name">Please enter the account holders name.</string>
    <string name="error_empty_account_number">Please enter the account number.</string>
    <string name="error_empty_confirm_account_number">Please re-enter the account number.</string>
    <string name="error_empty_ifsc_code">Please enter the IFSC code.</string>
    <string name="error_empty_account_type">Please select the account type.</string>
    <string name="error_account_number_mismatch">Account number and confirm account number do not match.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="close">Close</string>
    <string name="transactions">Transactions</string>
    <string name="withdraw">Withdraw</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="withdrawal_7_working_days_for_transfer">Withdrawal amount would take 7 working days for transfer to your bank accounts</string>
    <string-array name="audioProfile">
        <item>DEFAULT</item>
        <item>SPEECH_STANDARD</item>
        <item>MUSIC_STANDARD</item>
        <item>MUSIC_STANDARD_STEREO</item>
        <item>MUSIC_HIGH_QUALITY</item>
        <item>MUSIC_HIGH_QUALITY_STEREO</item>
    </string-array>
    <string-array name="streamMode">
        <item>AGORA_CHANNEL</item>
        <item>CDN_URL</item>
    </string-array>
    <string-array name="defaultChannel">
        <item>Channel1</item>
    </string-array>
    <string-array name="audioScenario">
        <item>DEFAULT</item>
        <item>GAME_STREAMING</item>
        <item>CHATROOM</item>
    </string-array>
    <string-array name="audioChatBeautifier">
        <item>OFF</item>
        <item>CHAT_BEAUTIFIER_VITALITY</item>
        <item>CHAT_BEAUTIFIER_FRESH</item>
        <item>CHAT_BEAUTIFIER_MAGNETIC</item>
    </string-array>
    <string-array name="audioTimbreTransformation">
        <item>OFF</item>
        <item>TIMBRE_TRANSFORMATION_VIGOROUS</item>
        <item>TIMBRE_TRANSFORMATION_DEEP</item>
        <item>TIMBRE_TRANSFORMATION_MELLOW</item>
        <item>TIMBRE_TRANSFORMATION_FALSETTO</item>
        <item>TIMBRE_TRANSFORMATION_FULL</item>
        <item>TIMBRE_TRANSFORMATION_CLEAR</item>
        <item>TIMBRE_TRANSFORMATION_RESOUNDING</item>
        <item>TIMBRE_TRANSFORMATION_RINGING</item>
    </string-array>
</resources>